--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ keywords: "llc in texas,texas llc,how to form an llc in texas,starting an llc in
 					<br />
 					<div class="row">
 						<div class="-2u 8u" style="text-align:left">
-							<p class="editable">Services like LegalZoom and RocketLawyer take a minimum of 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
+							<p class="editable">Services like LegalZoom and RocketLawyer take a minimum of 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without the unneccesary waste of time or paper.</p>
 						</div>
 					</div>
 				</header>
