Remove bottom call to action

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ keywords: "llc in texas,texas llc,how to form an llc in texas,starting an llc in
 
 -->
 
-		<!-- CTA -->
+		<!-- CTA 
 			<section id="cta">
 			
 				<header>
@@ -173,4 +173,4 @@ keywords: "llc in texas,texas llc,how to form an llc in texas,starting an llc in
 					</ul>
 				</footer>
 			
-			</section>
+			</section>-->
