--- a/index.html
+++ b/index.html
@@ -19,29 +19,11 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">BetterLegal</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
+							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank">Single Member Texas LLC</a></li>
+              <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member Texas LLC</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
@@ -59,13 +41,9 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>BetterLegal</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
-						<br />
-						responsive template
-						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						<p>Create an LLC in <strong>15 minutes</strong> for <strong>$299</strong> and have it filed with the <strong>State of Texas</strong> next day</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
