--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						<header>
 							<h2>BetterLegal</h2>
 						</header>
-						<p>Create an LLC in <strong>15 minutes</strong> for <strong>$299</strong> and have it filed with the <strong>State of Texas</strong> next day</p>
+						<p>Create an LLC in <strong>15 minutes</strong> for <strong>$299</strong><br />
+						and have it filed with the <strong>State of Texas</strong> next day</p>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
