--- a/index.html
+++ b/index.html
@@ -60,26 +60,58 @@
 
 					<header class="special container">
 						<span class="icon fa-bar-chart-o"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
-						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						<h2>Everything you need to start your business in 3 days</h2>
+						<p>Services like LegalZoom and RocketLawyer take a minimum of 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
 					</header>
 
-					<!-- One -->
+					<!-- Included -->
+						<section class="wrapper style1 container special">
+							<div class="row">
+								<div class="4u 12u(narrower)">
+
+									<section>
+										<span class="icon featured fa-check"></span>
+										<header>
+											<h3>Certificate of Formation</h3>
+										</header>
+										<p>The Certificate of Formation of a limited liability company (LLC) is a document filed with the Texas Secretary of State to formally establish your business as a separate legal entity. It identifies your company’s name, managers, and registered agent, and provides a mailing address for important correspondence from the State and others.</p>
+									</section>
+
+								</div>
+								<div class="4u 12u(narrower)">
+
+									<section>
+										<span class="icon featured fa-check"></span>
+										<header>
+											<h3>Company Agreement</h3>
+										</header>
+										<p>While an LLC is legally established by filing a Certificate of Formation, it is imperative that you have a thorough Company Agreement that will govern your LLC’s business. Among other things, a Company Agreement identifies the members (owners) and managers of the LLC, including their respective ownership percentages and management rights, and establishes procedures for meetings, the admission or removal of members and managers, and the distribution of profits to members.</p>
+									</section>
+
+								</div>
+								<div class="4u 12u(narrower)">
+
+									<section>
+										<span class="icon featured fa-check"></span>
+										<header>
+											<h3>Banking Resolution and EIN/h3>
+										</header>
+										<p>In order to establish a bank account, your bank may require you to provide a banking resolution and Employer Identification Number (EIN). A banking resolution identifies which managers and officers of your LLC can draft checks, deposit or withdraw funds, etc. Your LLC’s EIN, which is also required if you plan to have employees, is provided by the Internal Revenue Service.</p>
+									</section>
+
+								</div>
+							</div>
+						</section>
+
+					<!-- Teal Background -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row 50%">
 								<div class="8u 12u(narrower)">
 
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>Why set up an LLC?</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>LLCs are quickly becoming the most popular type of business entity in the State of Texas and across the country, and for good reason. Unlike sole proprietorships or partnerships, all of the owners and managers of an LLC are typically protected against personal liability for business debts and other liabilities (meaning creditors cannot pursue the personal assets of a manager or member to pay business debts or judgments). And unlike corporations, LLCs are very flexible from a tax and management perspective. An LLC is not subject to double taxation, meaning that all business income is “passed through” to the owners and reported on their personal income tax returns. In addition, LLCs are more easily-managed than corporations, which must adhere to certain corporate formalities and annual compliance requirements that can be a hassle to keep up with.</p>
 									<footer>
 										<ul class="buttons">
 											<li><a href="#" class="button">Find Out More</a></li>
@@ -102,44 +134,6 @@
 							</div>
 						</section>
 
-					<!-- Two -->
-						<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="4u 12u(narrower)">
-
-									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>This is Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-								<div class="4u 12u(narrower)">
-
-									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-								<div class="4u 12u(narrower)">
-
-									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-							</div>
-						</section>
 
 					<!-- Three -->
 						<section class="wrapper style3 container special">
@@ -226,16 +220,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 
-					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
-
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; BetterLegal Solutions</li><li>Web Development by <a href="http://poseidonimaging.com">Poseidon Imaging</a></li>
 					</ul>
 
 				</footer>
