--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Banking Resolution and EIN/h3>
+											<h3>Banking Resolution and EIN</h3>
 										</header>
 										<p>In order to establish a bank account, your bank may require you to provide a banking resolution and Employer Identification Number (EIN). A banking resolution identifies which managers and officers of your LLC can draft checks, deposit or withdraw funds, etc. Your LLC’s EIN, which is also required if you plan to have employees, is provided by the Internal Revenue Service.</p>
 									</section>
