Commenting out bottom content

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						</section>
 
 
-					<!-- Three -->
+					<!-- Three 
 						<section class="wrapper style3 container special">
 
 							<header class="major">
@@ -197,7 +197,7 @@
 								</ul>
 							</footer>
 
-						</section>
+						</section>-->
 
 				</article>
 
@@ -221,7 +221,7 @@
 				<footer id="footer">
 
 					<ul class="copyright">
-						<li>&copy; BetterLegal Solutions</li><li>Web Development by <a href="http://poseidonimaging.com">Poseidon Imaging</a></li>
+						<li>&copy; BetterLegal Solutions LLC</li><li>Web Development by <a href="http://poseidonimaging.com">Poseidon Imaging</a></li>
 					</ul>
 
 				</footer>
