--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<h1 id="logo"><a href="index.html">BetterLegal</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank">Single Member Texas LLC</a></li>
-              <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member Texas LLC</a></li>
+							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1" target="_blank"><b>Single Member LLC</b></a></li>
+              <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank"><b>Multi Member LLC</b></a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
 						</ul>
 					</nav>
