More polish and icon change

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon fa-bar-chart-o"></span>
+						<span class="icon fa-edit"></span>
 						<h2>Everything you need to start your business in 3 days</h2>
 						<p>Services like LegalZoom and RocketLawyer take a minimum of 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
 					</header>
@@ -122,10 +122,10 @@
 
 									<ul class="featured-icons">
 										<li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon fa-lock"><span class="label">Feature 5</span></span></li>
+										<li><span class="icon fa-pencil-square-o"><span class="label">Feature 2</span></span></li>
+										<li><span class="icon fa-paper-plane-o"><span class="label">Feature 3</span></span></li>
+										<li><span class="icon fa-legal"><span class="label">Feature 4</span></span></li>
+										<li><span class="icon fa-calendar"><span class="label">Feature 5</span></span></li>
 										<li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
 									</ul>
 
