--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 
 									<ul class="featured-icons">
 										<li><span class="icon fa-clock-o"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon fa-pencil-square-o"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon fa-paper-plane-o"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon fa-legal"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon fa-calendar"><span class="label">Feature 5</span></span></li>
-										<li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
+										<li><span class="icon fa-calendar"><span class="label">Feature 2</span></span></li>
+										<li><span class="icon fa-pencil-square-o"><span class="label">Feature 3</span></span></li>
+										<li><span class="icon fa-paper-plane-o"><span class="label">Feature 4</span></span></li>
+										<li><span class="icon fa-legal"><span class="label">Feature 5</span></span></li>
+										<li><span class="icon fa-group"><span class="label">Feature 6</span></span></li>
 									</ul>
 
 								</div>
