--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<h1 id="logo"><a href="index.html">BetterLegal</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1">Single Member LLC</a></li>
+							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
               <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member LLC</a></li>
 						</ul>
 					</nav>
