--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>BetterLegal</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,7 @@
 					<h1 id="logo"><a href="index.html">BetterLegal</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="2"  target="_blank">Single Member LLC</a></li>
+							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
               <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member LLC</a></li>
 						</ul>
 					</nav>
@@ -60,7 +60,7 @@
 					<header class="special container">
 						<span class="icon fa-edit"></span>
 						<h2>Everything you need to start your business in 3 days</h2>
-						<p>Services like LegalZoom and RocketLawyer take a minimum of 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
+						<p>Services like LegalZoom and RocketLawyer take a minimum of <strong>business</strong> 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
 					</header>
 
 					<!-- Included -->
