--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 									</header>
 									<p>LLCs are quickly becoming the most popular type of business entity in the State of Texas and across the country, and for good reason. Unlike sole proprietorships or partnerships, all of the owners and managers of an LLC are typically protected against personal liability for business debts and other liabilities (meaning creditors cannot pursue the personal assets of a manager or member to pay business debts or judgments). And unlike corporations, LLCs are very flexible from a tax and management perspective. An LLC is not subject to double taxation, meaning that all business income is “passed through” to the owners and reported on their personal income tax returns. In addition, LLCs are more easily-managed than corporations, which must adhere to certain corporate formalities and annual compliance requirements that can be a hassle to keep up with.</p>
 									<footer>
-										<ul class="buttons">
+										<!--<ul class="buttons">
 											<li><a href="#" class="button">Find Out More</a></li>
-										</ul>
+										</ul>-->
 									</footer>
 
 								</div>
@@ -199,7 +199,7 @@
 
 				</article>
 
-			<!-- CTA -->
+			<!-- CTA 
 				<section id="cta">
 
 					<header>
@@ -213,7 +213,7 @@
 						</ul>
 					</footer>
 
-				</section>
+				</section>-->
 
 			<!-- Footer -->
 				<footer id="footer">
