Trying the video embed

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						<ul>
 							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
               <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member LLC</a></li>
+              <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Create an LLC</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -44,6 +45,7 @@
 						</header>
 						<p>Create an LLC in <strong>15 minutes</strong> for <strong>$299</strong><br />
 						and have it filed with the <strong>State of Texas</strong> next day</p>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/PS6AtjkU20c" frameborder="0" allowfullscreen></iframe>
 						<footer>
 							<ul class="buttons vertical">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -59,7 +61,7 @@
 
 					<header class="special container">
 						<h2>Everything you need to start your business in 3 days</h2>
-						<p>Services like LegalZoom and RocketLawyer take a minimum of <strong>business</strong> 7 days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
+						<p>Services like LegalZoom and RocketLawyer take a minimum of 7 <strong>business</strong> days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
 					</header>
 
 					<!-- Included -->
