--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/PS6AtjkU20c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 						<footer>
 							<ul class="buttons vertical">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#main" class="button fit scrolly">Create a Texas LLC</a></li>
 							</ul>
 						</footer>
 
