Text to 2 business days

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<article id="main">
 
 					<header class="special container">
-						<h2>Everything you need to start your business in 3 days</h2>
+						<h2>Everything you need to start your business in 2 business days</h2>
 						<p>Services like LegalZoom and RocketLawyer take a minimum of 7 <strong>business</strong> days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
 					</header>
 
