font awesome icon change

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 										<li><span class="icon fa-calendar"><span class="label">Feature 2</span></span></li>
 										<li><span class="icon fa-pencil-square-o"><span class="label">Feature 3</span></span></li>
 										<li><span class="icon fa-paper-plane-o"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon fa-legal"><span class="label">Feature 5</span></span></li>
+										<li><span class="icon fa-user"><span class="label">Feature 5</span></span></li>
 										<li><span class="icon fa-group"><span class="label">Feature 6</span></span></li>
 									</ul>
 
