More content tweaking

--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -52,7 +52,6 @@
 
           <header class="special container">
             <h2>What kind of LLC do you need?</h2>
-            <p>Read below and select the type of LLC you want us to form for you.</p>
           </header>
 
 
@@ -63,12 +62,12 @@
 
                   <section>
                     <header>
-                      <h3>This is Something</h3>
+                      <h3>Single Member LLC</h3>
                     </header>
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a href="#" class="button small">Learn More</a></li>
+                        <li><a href="#" class="button small">Create a Single Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
@@ -79,12 +78,12 @@
 
                   <section>
                     <header>
-                      <h3>Probably Something</h3>
+                      <h3>Multi Member LLC</h3>
                     </header>
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a href="#" class="button small">Learn More</a></li>
+                        <li><a href="#" class="button small">Create a Multi Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
