--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -19,7 +19,7 @@
 
       <!-- Header -->
         <header id="header">
-          <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+          <h1 id="logo"><a href="index.html">BetterLegal</a></h1>
           <nav id="nav">
             <ul>
               <li class="current"><a href="index.html">Welcome</a></li>
@@ -51,7 +51,7 @@
         <article id="main">
 
           <header class="special container">
-            <h2>What kind of LLC do you need?</h2>
+            <h2>What type of LLC do you need?</h2>
           </header>
 
 
@@ -67,7 +67,7 @@
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a href="#" class="button small">Create a Single Member LLC</a></li>
+                        <li><a href="#" class="button large">Create a Single Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
