Linking up the pages and forms

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<ul>
 							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
               <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member LLC</a></li>
-              <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Create a Texas LLC</a></li>
+              <li><a class="typeform-share link" href="/create-a-texas-llc.html" target="_blank">Create a Texas LLC</a></li>
 						</ul>
 					</nav>
 				</header>
