--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -20,31 +20,6 @@
       <!-- Header -->
         <header id="header">
           <h1 id="logo"><a href="index.html">BetterLegal</a></h1>
-          <nav id="nav">
-            <ul>
-              <li class="current"><a href="index.html">Welcome</a></li>
-              <li class="submenu">
-                <a href="#">Layouts</a>
-                <ul>
-                  <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                  <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                  <li><a href="no-sidebar.html">No Sidebar</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li class="submenu">
-                    <a href="#">Submenu</a>
-                    <ul>
-                      <li><a href="#">Dolore Sed</a></li>
-                      <li><a href="#">Consequat</a></li>
-                      <li><a href="#">Lorem Magna</a></li>
-                      <li><a href="#">Sed Magna</a></li>
-                      <li><a href="#">Ipsum Nisl</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li><a href="#" class="button special">Sign Up</a></li>
-            </ul>
-          </nav>
         </header>
 
       <!-- Main -->
@@ -62,12 +37,13 @@
 
                   <section>
                     <header>
-                      <h3>Single Member LLC</h3>
+                      <span class="icon fa-user"><h3>Single Member LLC</h3></span>
+
                     </header>
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a href="#" class="button large">Create a Single Member LLC</a></li>
+                        <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Create a Single Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
@@ -83,7 +59,7 @@
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a href="#" class="button small">Create a Multi Member LLC</a></li>
+                        <li><a href="#" class="button large">Create a Multi Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
@@ -98,7 +74,7 @@
         <footer id="footer">
 
           <ul class="copyright">
-            <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; BetterLegal Solutions LLC</li><li>Web Development by <a href="http://poseidonimaging.com">Poseidon Imaging</a></li>
           </ul>
 
         </footer>
@@ -106,6 +82,8 @@
     </div>
 
     <!-- Scripts -->
+      <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+
       <script src="assets/js/jquery.min.js"></script>
       <script src="assets/js/jquery.dropotron.min.js"></script>
       <script src="assets/js/jquery.scrolly.min.js"></script>
