--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -43,7 +43,7 @@
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Create a Single Member LLC</a></li>
+                        <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Create a Single Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
