--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -37,7 +37,7 @@
 
                   <section>
                     <header>
-                      <span class="icon fa-user"><h3>Single Member LLC</h3></span>
+                      <span class="icon fa-user fa-5x"><h3>Single Member LLC</h3></span>
 
                     </header>
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
