--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -37,7 +37,7 @@
 
                   <section>
                     <header>
-                      <span class="icon fa-user fa-5x"></span><h3>Single Member LLC</h3>
+                      <span class="icon fa-user fa-3x"></span><h3>Single Member LLC</h3>
 
                     </header>
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
@@ -54,12 +54,12 @@
 
                   <section>
                     <header>
-                      <h3>Multi Member LLC</h3>
+                      <span class="icon fa-group fa-3x"></span><h3>Multi Member LLC</h3>
                     </header>
                     <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a href="#" class="button large">Create a Multi Member LLC</a></li>
+                        <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1"  target="_blank">Create a Multi Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
