--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 					<h1 id="logo"><a href="index.html">BetterLegal</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
-              <li><a class="typeform-share link" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1" target="_blank">Multi Member LLC</a></li>
               <li><a class="typeform-share link" href="/create-a-texas-llc.html" target="_blank">Create a Texas LLC</a></li>
 						</ul>
 					</nav>
@@ -49,7 +47,7 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/PS6AtjkU20c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 						<footer>
 							<ul class="buttons vertical">
-								<li><a href="#main" class="button fit scrolly">Create a Texas LLC</a></li>
+								<li><a href="/create-a-texas-llc.html" class="button fit scrolly">Create a Texas LLC</a></li>
 							</ul>
 						</footer>
 
