--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -22,6 +22,8 @@
           <h1 id="logo"><a href="index.html">BetterLegal</a></h1>
         </header>
 
+        <h1 id="logo"><a href="index.html">BetterLegal</a></h1>
+
       <!-- Main -->
         <article id="main">
 
