--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -18,8 +18,9 @@
     <div id="page-wrapper">
 
       <!-- Header -->
-
-        <h1><a href="index.html">BetterLegal</a></h1>
+        <header id="header">
+          <h1 id="logo"><a href="index.html">BetterLegal</a></h1>
+        </header>
 
       <!-- Main -->
         <article id="main">
