--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -40,7 +40,7 @@
                       <span class="icon fa-user fa-3x"></span><br><h3>Single Member LLC</h3>
 
                     </header>
-                    <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+                    <p>SSelect this option if you will be the sole Member (owner), Manager, and Registered Agent of your new company. A simple, single-member LLC is perfect for new business owners who need a quick and easy company structure.</p>
                     <footer>
                       <ul class="buttons">
                         <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
@@ -56,7 +56,7 @@
                     <header>
                       <span class="icon fa-group fa-3x"></span><br><h3>Multi Member LLC</h3>
                     </header>
-                    <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+                    <p>Select this option for a more robust and comprehensive company structure, allowing for multiple Members (owners) and Managers. You can configure up to three Managers and five Members.</p>
                     <footer>
                       <ul class="buttons">
                         <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1"  target="_blank">Multi Member LLC</a></li>
