--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -40,7 +40,7 @@
                       <span class="icon fa-user fa-3x"></span><br><h3>Single Member LLC</h3>
 
                     </header>
-                    <p>Select this option if you will be the sole Member (owner), Manager, and Registered Agent of your new company. A simple, single-member LLC is perfect for new business owners who need a quick and easy company structure.</p>
+                    <p>Select this option if you will be the sole Member (owner), Manager, and Registered Agent of your new company. This is perfect for new business owners who need a quick and easy company structure.</p>
                     <footer>
                       <ul class="buttons">
                         <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
