Change buttons to direct to internal forms

--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -43,7 +43,7 @@
                     <p>Select this option if you will be the sole Member (owner), Manager, and Registered Agent of your new company. This is perfect for new business owners who need a quick and easy company structure.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/q3PTpn" data-mode="1"  target="_blank">Single Member LLC</a></li>
+                        <li><a class="button" href="/texas-llc-single-member.html" target="_blank">Single Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
@@ -59,7 +59,7 @@
                     <p>Select this option for a more robust and comprehensive company structure, allowing for multiple Members (owners) and Managers. You can configure up to three Managers and five Members.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a class="typeform-share button" href="https://poseidonimaging.typeform.com/to/vjmGhh" data-mode="1"  target="_blank">Multi Member LLC</a></li>
+                        <li><a class="button" href="/texas-llc-multi-member.html" target="_blank">Multi Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
@@ -82,8 +82,6 @@
     </div>
 
     <!-- Scripts -->
-      <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-
       <script src="assets/js/jquery.min.js"></script>
       <script src="assets/js/jquery.dropotron.min.js"></script>
       <script src="assets/js/jquery.scrolly.min.js"></script>
