Open forms in _self tab

--- a/create-a-texas-llc.html
+++ b/create-a-texas-llc.html
@@ -43,7 +43,7 @@
                     <p>Select this option if you will be the sole Member (owner), Manager, and Registered Agent of your new company. This is perfect for new business owners who need a quick and easy company structure.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a class="button" href="/texas-llc-single-member.html" target="_blank">Single Member LLC</a></li>
+                        <li><a class="button" href="/texas-llc-single-member.html" target="_self">Single Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
@@ -59,7 +59,7 @@
                     <p>Select this option for a more robust and comprehensive company structure, allowing for multiple Members (owners) and Managers. You can configure up to three Managers and five Members.</p>
                     <footer>
                       <ul class="buttons">
-                        <li><a class="button" href="/texas-llc-multi-member.html" target="_blank">Multi Member LLC</a></li>
+                        <li><a class="button" href="/texas-llc-multi-member.html" target="_self">Multi Member LLC</a></li>
                       </ul>
                     </footer>
                   </section>
