--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<h1 id="logo"><a href="index.html">BetterLegal</a></h1>
 					<nav id="nav">
 						<ul>
-              <li><a class="typeform-share link" href="/create-a-texas-llc.html" target="_blank">Create a Texas LLC</a></li>
+              <li><a class="typeform-share link" href="/create-a-texas-llc.html" target="_self">Create a Texas LLC</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -47,7 +47,7 @@
 						<script src="//fast.wistia.com/embed/medias/8h39u0qod3.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_8h39u0qod3 videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
 						<footer>
 							<ul class="buttons vertical">
-								<li><a href="/create-a-texas-llc.html" class="button fit scrolly">Create a Texas LLC</a></li>
+								<li><a href="/create-a-texas-llc.html" target="_self" class="button fit scrolly">Create a Texas LLC</a></li>
 							</ul>
 						</footer>
 
