--- a/llc-texas-cost.html
+++ b/llc-texas-cost.html
@@ -33,12 +33,12 @@
           <!-- One -->
             <section class="wrapper style1 container special">
               <div class="row">
-                <div class="6u 12u(narrower)">
+                <div class="8u 6u(narrower)">
 
                   <section>
                     <p align="left">The costs for filing an LLC with Texas Secretary of State is $300 (plus transaction fees) for the required Certificate of Formation. This can be done by anyone through the SOSDirect website or by a third party like us at BetterLegal.</p>
 
-                    <p>One of the major benefits to using our service is that we'll worry about navigating the State's confusing and poorly laid out website and make sure all the information is submitted correctly. You'll also receive a top quality Company Agreement which lays out the details of how your LLC is run and by whom. Finally, we'll also obtain your Employer Identification Number from the Federal government which is often required to establish your LLCs bank account (to keep your LLC and personal assets separate).</p>
+                    <p align="left">One of the major benefits to using our service is that we'll worry about navigating the State's confusing and poorly laid out website and make sure all the information is submitted correctly. You'll also receive a top quality Company Agreement which lays out the details of how your LLC is run and by whom. Finally, we'll also obtain your Employer Identification Number from the Federal government which is often required to establish your LLCs bank account (to keep your LLC and personal assets separate).</p>
                     <footer>
                       <ul class="buttons">
                         <li><a class="button" href="/create-a-texas-llc.html" target="_self">Create a Texas LLC</a></li>
