--- a/llc-texas-cost.html
+++ b/llc-texas-cost.html
@@ -33,7 +33,7 @@
           <!-- One -->
             <section class="wrapper style1 container special">
               <div class="row">
-                <div class="8u offset-6u(narrower)">
+                <div class="12u">
 
                   <section>
                     <p align="left">The costs for filing an LLC with Texas Secretary of State is $300 (plus transaction fees) for the required Certificate of Formation. This can be done by anyone through the SOSDirect website or by a third party like us at BetterLegal.</p>
