--- a/llc-texas-cost.html
+++ b/llc-texas-cost.html
@@ -20,6 +20,11 @@
       <!-- Header -->
         <header id="header">
           <h1 id="logo"><a href="index.html">BetterLegal</a></h1>
+          <nav id="nav">
+            <ul>
+              <li><a class="typeform-share link" href="/create-a-texas-llc.html" target="_self">Create a Texas LLC</a></li>
+            </ul>
+          </nav>
         </header>
 
       <!-- Main -->
