--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 				<footer id="footer">
 
 					<ul class="copyright">
+						<li><b>Important Disclaimer:</b> BetterLegal is not a law firm, nor is it a substitution for a law firm or an attorney. BetterLegal strives to facilitate the process by which individuals set up their businesses, but we do not and cannot provide legal advice, explanations, options, opinions, or recommendations about legal rights, remedies, business structure and operations, use of business and legal forms, or general business and legal strategies. While your communications with us are protected by our Privacy Policy, they are not protected by the attorney-client privilege. Your access to and use of this website is subject to our Terms of Use.</li>
 						<li>&copy; BetterLegal Solutions LLC</li><li>Web Development by <a href="http://poseidonimaging.com">Poseidon Imaging</a></li>
 					</ul>
 
